Mobile: fix hero tagline wrapping, increase font size, reduce top padding

--- a/css/little-business-2.webflow.css
+++ b/css/little-business-2.webflow.css
@@ -1642,7 +1642,7 @@ ul {
   }
 
   .container.full-screen-height.intro {
-    padding-top: 6.5em;
+    padding-top: 2.5em;
     padding-bottom: 4em;
   }
 
@@ -1823,7 +1823,7 @@ ul {
   }
 
   .section-1-heading {
-    font-size: 2.9em;
+    font-size: 3.3em;
   }
 
   .packages-heading {
